# asset-cluster-migration

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.template.md  RESEARCH_DESIGN.md  paper.tex  paper_backup.tex  pyproject.toml  truthsync.yaml
config/: event_windows.yaml  methodology.yaml  settings.yaml  universe.yaml
data/processed/: amf_phase2.csv  amf_scores.csv  asset_labels.csv  bootstrap_results.json  centrality_metrics.parquet  cleaned_prices.parquet  cluster_assignments.parquet  fast_tds_timeseries.parquet  granger_f_stats.parquet  granger_pvalues.parquet  information_flow_ranking.csv  kmeans_baseline_comparison.parquet  kmeans_covid_event_summary.csv  log_returns.parquet  migration_paths.parquet  migration_timeseries.parquet  phase2_cluster_assignments.parquet  phase2_migration_timeseries.parquet  regime_features.parquet  regime_labels.csv  regime_properties.csv  regime_validation_results.json  sensitivity_results.json  surrogate_results.json  te_full_sample.parquet  walk_forward_results.json
outputs/: PHASE_PROGRESS_REPORT.md
outputs/reports/: acm_daily_report_2026-03-30.html  acm_daily_report_2026-03-31.html  acm_daily_report_2026-04-01.html  acm_daily_report_2026-04-02.html  acm_daily_report_2026-04-03.html  acm_daily_report_2026-04-06.html  (+112 more)
scripts/: generate_readme.py
src/: config.py  constants.py
src/data/: cache.py  (+4 more)
tests/: conftest.py  test_clustering.py  test_fmp_client.py  test_graph_construction.py  test_migration_metrics.py  test_regime_detection.py  test_robustness.py  test_similarity.py
(+47 files in other folders)
